--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="popcorn.css" />
   </head>
 
   <body>
-    <header>
-      <span>Im not</span>
+    <main></main>
+    <header onclick="sacarlasPopcorn()">
+      <span onclick="sacarlasPopcorn()">Im not</span>
       <h1>Netflix</h1>
     </header>
     <div class="contenedor" id="contenedor"></div>
@@ -21,4 +23,5 @@
   </body>
   <script src="app_Completar.js"></script>
   <script src="misIconos.js"></script>
+  <script src="popcorn.js"></script>
 </html>
